--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4"
   }
 }
