--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./server.js"
   },
   "author": "Matthew Lee",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "morgan": "^1.9.1",
-    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4"
   }
 }
